<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="smssdk_error_desc_400">无效请求</string>
    <string name="smssdk_error_desc_401">token为空</string>
    <string name="smssdk_error_desc_402">token不存在</string>
    <string name="smssdk_error_desc_403">CRC32为空</string>
    <string name="smssdk_error_desc_404">CRC32非法</string>
    <string name="smssdk_error_desc_405">AppKey为空</string>
    <string name="smssdk_error_desc_406">AppKey错误</string>
    <string name="smssdk_error_desc_407">缺少数据</string>
    <string name="smssdk_error_desc_408">无效的参数</string>
    <string name="smssdk_error_desc_418">内部接口调用失败</string>
    <string name="smssdk_error_desc_419">duid对应的token不存在</string>
    <string name="smssdk_error_desc_450">权限不足</string>
    <string name="smssdk_error_desc_451">User-Agent为空</string>
    <string name="smssdk_error_desc_452">User-Agent格式错误</string>
    <string name="smssdk_error_desc_453">解密错误</string>
    <string name="smssdk_error_desc_454">数据格式错误</string>
    <string name="smssdk_error_desc_455">签名无效</string>
    <string name="smssdk_error_desc_456">手机号码错误</string>
    <string name="smssdk_error_desc_457">非法手机号</string>
    <string name="smssdk_error_desc_458">AppKey在黑名单中</string>
    <string name="smssdk_error_desc_459">无appKey的控制数据</string>
    <string name="smssdk_error_desc_460">无权限发送短信</string>
    <string name="smssdk_error_desc_461">不支持该地区发送短信</string>
    <string name="smssdk_error_desc_462">每分钟发送次数超限</string>
    <string name="smssdk_error_desc_463">手机号码每天发送次数超限</string>
    <string name="smssdk_error_desc_464">每台手机每天发送次数超限</string>
    <string name="smssdk_error_desc_465">号码在App中每天发送短信的次数超限</string>
    <string name="smssdk_error_desc_466">校验的验证码为空</string>
    <string name="smssdk_error_desc_467">校验验证码请求频繁</string>
    <string name="smssdk_error_desc_468">需要校验的验证码错误</string>
    <string name="smssdk_error_desc_469">未开启web发送短信</string>
    <string name="smssdk_error_desc_470">账户余额不足</string>
    <string name="smssdk_error_desc_471">请求IP错误</string>
    <string name="smssdk_error_desc_472">获取客户端平台错误</string>
    <string name="smssdk_error_desc_473">服务端根据duid获取平台错误</string>
    <string name="smssdk_error_desc_474">没有打开服务端验证开关</string>
    <string name="smssdk_error_desc_475">appKey的应用信息不存在</string>
    <string name="smssdk_error_desc_476">当前appkey发送短信的数量超过限额</string>
    <string name="smssdk_error_desc_477">当前手机号发送短信的数量超过限额</string>
    <string name="smssdk_error_desc_478">当前手机号在当前应用内发送超过限额</string>
    <string name="smssdk_error_desc_500">服务器内部错误</string>
    <string name="smssdk_error_desc_501">501 Not Implemented</string>
    <string name="smssdk_error_desc_502">502 Bad Gateway</string>
    <string name="smssdk_error_desc_503">503 Service Unavailable</string>
    <string name="smssdk_error_desc_504">504 Gateway Timeout</string>
    <string name="smssdk_error_desc_505">505 HTTP Version Not Supported</string>
    <string name="smssdk_error_desc_506">506 Variant Also Negotiates (RFC 2295)</string>
    <string name="smssdk_error_desc_507">507 Insufficient Storage (WebDAV; RFC 4918)</string>
    <string name="smssdk_error_desc_508">508 Loop Detected (WebDAV; RFC 5842)</string>
    <string name="smssdk_error_desc_510">510 Not Extended (RFC 2774)</string>
    <string name="smssdk_error_desc_511">511 Network Authentication Required (RFC 6585)</string>
    <string name="smssdk_error_desc_600">请求太频繁，API使用受限制</string>
    <string name="smssdk_error_desc_601">开关未打开，短信发送受限</string>
    <string name="smssdk_error_desc_602">无法发送此地区短信</string>
    <string name="smssdk_error_desc_603">请填写正确的手机号码</string>
    <string name="smssdk_error_desc_604">当前服务暂不支持此国家，请选择其它国家</string>
    <string name="smssdk_error_desc_605">没有权限连接服务端</string>
    <string name="smssdk_error_desc_server_busy">服务器繁忙</string>
    <string name="smssdk_error_detail_400">客户端请求不能被识别。</string>
    <string name="smssdk_error_detail_401">请求的token为空。</string>
    <string name="smssdk_error_detail_402">请求的token不存在。</string>
    <string name="smssdk_error_detail_403">请求Header中的hash为空。</string>
    <string name="smssdk_error_detail_404">请求Header中的hash非法。</string>
    <string name="smssdk_error_detail_405">请求的AppKey为空。</string>
    <string name="smssdk_error_detail_406">请求的AppKey不存在。</string>
    <string name="smssdk_error_detail_407">请求提交的数据缺少必要的数据。</string>
    <string name="smssdk_error_detail_408">无效的请求参数。</string>
    <string name="smssdk_error_detail_418">内部接口调用失败。</string>
    <string name="smssdk_error_detail_419">appKey_token对应的duid不存在</string>
    <string name="smssdk_error_detail_450">无权执行该操作。</string>
    <string name="smssdk_error_detail_451">所有访问服务器的接口，在请求的头部必须加入指定格式的User-Agent。</string>
    <string name="smssdk_error_detail_452">请求头中的User-Agent格式错误。</string>
    <string name="smssdk_error_detail_453">解密请求数据错误。</string>
    <string name="smssdk_error_detail_454">请求传递的数据格式错误，服务器无法转换为JSON格式的数据。</string>
    <string name="smssdk_error_detail_455">签名检验。</string>
    <string name="smssdk_error_detail_456">提交的手机号码或者区号为空。</string>
    <string name="add">Add</string>
    <string name="air_fen_xiang">direction</string>
    <string name="back">back</string>
    <string name="cancel">Cancel</string>
    <string name="cha_down">Under channel</string>
    <string name="cha_up">On channel</string>
    <string name="delete_item">Delete device</string>
    <string name="effect">效果</string>
    <string name="fan_speed">speed</string>
    <string name="menu">menu</string>
    <string name="mode">Mode</string>
    <string name="off">Off</string>
    <string name="off_line_title1">设备已离线</string>
    <string name="off_line_title2">请检查设备是否正常工作</string>
    <string name="on">On</string>
    <string name="on_off">switch</string>
    <string name="play_back">play back</string>
    <string name="rc_key_fan_head">摇头</string>
    <string name="rc_key_fan_mute">静音</string>
    <string name="rc_key_fan_speed">风速</string>
    <string name="rc_key_fan_timing">定时</string>
    <string name="rc_key_fan_type">风类</string>
    <string name="rc_key_on_off">开关</string>
    <string name="readme1">1.How to install device</string>
    <string name="readme2">2.How to configure the connection device</string>
    <string name="readme3">3.Mode use</string>
    <string name="readme4">4.Color use</string>
    <string name="readme5">5.Music use</string>
    <string name="readme6">6.Timing use</string>
    <string name="readme7">7.Common problem</string>
    <string name="refresh_lv">刷新列表</string>
    <string name="timing">Timing</string>
    <string name="update_info_1">Firmware Upgrate</string>
    <string name="update_info_2">Router New Version is available： V1.00.00.02</string>
    <string name="update_info_3">Version sizer Version i：32KB</string>
    <string name="update_info_4">Attn.： Update causes Network</string>
    <string name="update_info_5">Interruption,please do not disconnet</string>
    <string name="update_info_6">the power to the Router during updata</string>
    <string name="update_info_7">process</string>
    <string name="update_info_8">This update</string>
    <string name="update_info_9">Dear user,welcome to use LTECH RDM</string>
    <string name="upgradenow">Upgrade now</string>
    <string name="upgradetips">"Device is being upgraded,do not discoonect the
power supply this process takes about 4 minutes,
please wait patidntty."</string>
    <string name="vol_big">Large volume</string>
    <string name="vol_small">Small volume</string>
    <string name="xin_hao_yuan">信号源-</string>
    <string name="zhu_ye">homepage</string>
</resources>