<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ffffffff" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/at_base_yk" />
    <ImageView android:background="#ffa8a8a8" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="50.0dip" />
    <com.zhy.android.percent.support.PercentRelativeLayout android:layout_width="fill_parent" android:layout_height="200.0dip" android:layout_marginTop="66.0dip" android:layout_below="@id/bg">
        <com.ex.ltech.hongwai.view.ImageTextBigButton android:id="@id/k1" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/stb_up" android:scaleType="fitCenter" app:b_b_iv_drawable="@mipmap/n_rc_diy_k1" app:b_b_tv_name="@string/on_off" app:layout_widthPercent="25%w" app:layout_heightPercent="25%w" />
        <com.ex.ltech.hongwai.view.ImageTextBigButton android:id="@id/k2" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/stb_down" android:scaleType="fitCenter" app:b_b_iv_drawable="@mipmap/n_rc_diy_k2" app:b_b_tv_name="@string/menu" app:layout_widthPercent="25%w" app:layout_heightPercent="25%w" app:layout_marginLeftPercent="25%w" />
        <com.ex.ltech.hongwai.view.ImageTextBigButton android:id="@id/k3" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/stb_k3" android:scaleType="fitCenter" app:b_b_iv_drawable="@mipmap/n_rc_diy_k3" app:b_b_tv_name="@string/back" app:layout_widthPercent="25%w" app:layout_heightPercent="25%w" app:layout_marginLeftPercent="50%w" />
        <com.ex.ltech.hongwai.view.ImageTextBigButton android:id="@id/k4" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/stb_k4" android:scaleType="fitCenter" android:layout_alignParentRight="true" app:b_b_iv_drawable="@mipmap/n_rc_diy_k4" app:b_b_tv_name="@string/xin_hao_yuan" app:layout_widthPercent="25%w" app:layout_heightPercent="25%w" />
        <com.ex.ltech.hongwai.view.ImageTextBigButton android:id="@id/k5" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/stb_k5" android:scaleType="fitCenter" app:b_b_iv_drawable="@mipmap/n_rc_diy_k5" app:b_b_tv_name="@string/mode" app:layout_widthPercent="25%w" app:layout_heightPercent="25%w" app:layout_marginTopPercent="25%w" />
        <com.ex.ltech.hongwai.view.ImageTextBigButton android:id="@id/k6" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/stb_k6" android:scaleType="fitCenter" app:b_b_iv_drawable="@mipmap/n_rc_diy_k6" app:b_b_tv_name="@string/fan_speed" app:layout_widthPercent="25%w" app:layout_heightPercent="25%w" app:layout_marginLeftPercent="25%w" app:layout_marginTopPercent="25%w" />
        <com.ex.ltech.hongwai.view.ImageTextBigButton android:id="@id/k7" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/stb_k7" android:scaleType="fitCenter" app:b_b_iv_drawable="@mipmap/n_rc_diy_k7" app:b_b_tv_name="@string/air_fen_xiang" app:layout_widthPercent="25%w" app:layout_heightPercent="25%w" app:layout_marginLeftPercent="50%w" app:layout_marginTopPercent="25%w" />
        <com.ex.ltech.hongwai.view.ImageTextBigButton android:id="@id/k8" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/stb_k8" android:scaleType="fitCenter" android:layout_alignParentRight="true" app:b_b_iv_drawable="@mipmap/n_rc_diy_k8" app:b_b_tv_name="@string/rc_key_fan_head" app:layout_widthPercent="25%w" app:layout_heightPercent="25%w" app:layout_marginTopPercent="25%w" />
    </com.zhy.android.percent.support.PercentRelativeLayout>
    <com.zhy.android.percent.support.PercentRelativeLayout android:layout_width="fill_parent" android:layout_height="300.0dip" android:layout_marginTop="261.0dip">
        <com.ex.ltech.hongwai.view.ImageTextBigButton android:id="@id/k9" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/stb_up" android:scaleType="fitCenter" app:b_b_iv_drawable="@mipmap/n_rc_diy_k9" app:b_b_tv_name="@string/vol_big" app:layout_widthPercent="25%w" app:layout_heightPercent="25%w" />
        <com.ex.ltech.hongwai.view.ImageTextBigButton android:id="@id/k10" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/stb_down" android:scaleType="fitCenter" app:b_b_iv_drawable="@mipmap/n_rc_diy_k10" app:b_b_tv_name="@string/vol_small" app:layout_widthPercent="25%w" app:layout_heightPercent="25%w" app:layout_marginLeftPercent="25%w" />
        <com.ex.ltech.hongwai.view.ImageTextBigButton android:id="@id/k11" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/stb_k3" android:scaleType="fitCenter" app:b_b_iv_drawable="@mipmap/n_rc_diy_k11" app:b_b_tv_name="@string/cha_up" app:layout_widthPercent="25%w" app:layout_heightPercent="25%w" app:layout_marginLeftPercent="50%w" />
        <com.ex.ltech.hongwai.view.ImageTextBigButton android:id="@id/k12" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/stb_k4" android:scaleType="fitCenter" android:layout_alignParentRight="true" app:b_b_iv_drawable="@mipmap/n_rc_diy_k12" app:b_b_tv_name="@string/cha_down" app:layout_widthPercent="25%w" app:layout_heightPercent="25%w" />
        <com.ex.ltech.hongwai.view.ImageTextBigButton android:id="@id/k13" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/stb_k5" android:scaleType="fitCenter" app:b_b_iv_drawable="@mipmap/n_rc_diy_k13" app:b_b_tv_name="@string/zhu_ye" app:layout_widthPercent="25%w" app:layout_heightPercent="25%w" app:layout_marginTopPercent="25%w" />
        <com.ex.ltech.hongwai.view.ImageTextBigButton android:id="@id/k14" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/stb_k6" android:scaleType="fitCenter" app:b_b_iv_drawable="@mipmap/n_rc_diy_k14" app:b_b_tv_name="@string/timing" app:layout_widthPercent="25%w" app:layout_heightPercent="25%w" app:layout_marginLeftPercent="25%w" app:layout_marginTopPercent="25%w" />
        <com.ex.ltech.hongwai.view.ImageTextBigButton android:id="@id/k15" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/stb_k7" android:scaleType="fitCenter" app:b_b_iv_drawable="@mipmap/n_rc_diy_k15" app:b_b_tv_name="@string/play_back" app:layout_widthPercent="25%w" app:layout_heightPercent="25%w" app:layout_marginLeftPercent="50%w" app:layout_marginTopPercent="25%w" />
        <com.ex.ltech.hongwai.view.ImageTextBigButton android:id="@id/k16" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/stb_k8" android:scaleType="fitCenter" android:layout_alignParentRight="true" app:b_b_iv_drawable="@mipmap/n_rc_diy_k16" app:b_b_tv_name="@string/rc_key_fan_mute" app:layout_widthPercent="25%w" app:layout_heightPercent="25%w" app:layout_marginTopPercent="25%w" />
        <com.ex.ltech.hongwai.view.ImageTextBigButton android:id="@id/k17" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="461.0dip" android:src="@mipmap/stb_k8" android:scaleType="fitCenter" app:b_b_iv_drawable="@mipmap/n_rc_diy_add" app:b_b_tv_name="@string/add" app:layout_widthPercent="25%w" app:layout_heightPercent="25%w" app:layout_marginTopPercent="50%w" />
    </com.zhy.android.percent.support.PercentRelativeLayout>
</RelativeLayout>