<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="#fff0f0f0" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/include" layout="@layout/acti_title_view" />
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="90.0dip" android:layout_marginTop="160.0dip">
        <TextView android:textSize="13.0dip" android:textColor="#fff14655" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_info_4" />
        <TextView android:textSize="13.0dip" android:textColor="#fff14655" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/update_info_5" />
        <TextView android:textSize="13.0dip" android:textColor="#fff14655" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/update_info_6" />
        <TextView android:textSize="13.0dip" android:textColor="#fff14655" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/update_info_7" />
    </LinearLayout>
    <TextView android:background="#ff737373" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginBottom="45.0dip" android:layout_alignParentBottom="true" />
    <TextView android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_alignParentBottom="true" />
    <TextView android:textColor="#ff474747" android:background="@mipmap/btn_bg" android:paddingLeft="30.0dip" android:paddingTop="7.0dip" android:paddingRight="30.0dip" android:paddingBottom="8.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginBottom="5.0dip" android:text="@string/cancel" android:layout_alignParentBottom="true" android:onClick="cancel" />
    <TextView android:textColor="#ffff0000" android:background="@mipmap/btn_bg" android:paddingLeft="18.0dip" android:paddingTop="7.0dip" android:paddingRight="18.0dip" android:paddingBottom="8.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="18.0dip" android:layout_marginBottom="5.0dip" android:text="@string/upgradenow" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:onClick="upgrade" />
    <RelativeLayout android:id="@id/rl_load" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="50.0dip">
        <RelativeLayout android:background="@drawable/shap2" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" android:layout_centerInParent="true">
            <ProgressBar android:layout_width="35.0dip" android:layout_height="35.0dip" android:layout_marginTop="10.0dip" android:indeterminateOnly="true" android:indeterminateDrawable="@drawable/progressbg" android:indeterminateBehavior="repeat" android:layout_centerHorizontal="true" />
            <TextView android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="60.0dip" android:text="@string/upgradetips" android:maxEms="20" android:singleLine="false" />
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/include">
        <TextView android:textSize="18.0dip" android:textColor="#ff626262" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_info_1" />
        <TextView android:textSize="13.0dip" android:textColor="#ff626262" android:id="@id/tv_vs_1" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/update_info_2" />
        <TextView android:textSize="13.0dip" android:textColor="#ff626262" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/update_info_3" />
        <ImageView android:background="@mipmap/warn" android:layout_width="60.0dip" android:layout_height="55.0dip" android:layout_marginTop="20.0dip" />
        <TextView android:textSize="18.0dip" android:textColor="#ff626262" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="65.0dip" android:text="@string/update_info_8" />
        <TextView android:textSize="13.0dip" android:textColor="#ff626262" android:id="@id/tv_vs_2" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/update_info_9" />
        <TextView android:textSize="13.0dip" android:textColor="#ff626262" android:id="@id/tv_vs_3" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/update_info_2" />
    </LinearLayout>
</RelativeLayout>