<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/acti_title_view" />
    <TextView android:background="#ffc7c7c7" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="22.0dip" android:id="@id/tv_act_readme_1" android:paddingLeft="20.0dip" android:paddingTop="13.0dip" android:paddingBottom="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/readme1" />
    <TextView android:background="#ffc7c7c7" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="22.0dip" android:id="@id/tv_act_readme_2" android:paddingLeft="20.0dip" android:paddingTop="13.0dip" android:paddingBottom="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/readme2" />
    <TextView android:background="#ffc7c7c7" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="22.0dip" android:id="@id/tv_act_readme_3" android:paddingLeft="20.0dip" android:paddingTop="13.0dip" android:paddingBottom="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/readme3" />
    <TextView android:background="#ffc7c7c7" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="22.0dip" android:id="@id/tv_act_readme_4" android:paddingLeft="20.0dip" android:paddingTop="13.0dip" android:paddingBottom="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/readme4" />
    <TextView android:background="#ffc7c7c7" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="22.0dip" android:id="@id/tv_act_readme_5" android:paddingLeft="20.0dip" android:paddingTop="13.0dip" android:paddingBottom="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/readme5" />
    <TextView android:background="#ffc7c7c7" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="22.0dip" android:id="@id/tv_act_readme_6" android:paddingLeft="20.0dip" android:paddingTop="13.0dip" android:paddingBottom="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/readme6" />
    <TextView android:background="#ffc7c7c7" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="22.0dip" android:id="@id/tv_act_readme_7" android:paddingLeft="20.0dip" android:paddingTop="13.0dip" android:paddingBottom="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/readme7" />
    <TextView android:background="#ffc7c7c7" android:layout_width="fill_parent" android:layout_height="1.0dip" />
</LinearLayout>