<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/white_round_conner_stroke" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="#ffa0b9e2" android:gravity="center" android:id="@id/tv_on" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/on" />
        <View android:background="#ffdedede" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView android:textColor="#ffa0b9e2" android:gravity="center" android:id="@id/tv_off" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/off" />
        <View android:background="#ffdedede" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView android:textColor="#ffa0b9e2" android:gravity="center" android:id="@id/tv_effect" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/effect" />
    </LinearLayout>
    <TextView android:textColor="@color/black" android:gravity="center" android:id="@id/tv_cancel" android:background="@drawable/white_round_conner_stroke" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginTop="5.0dip" android:text="@string/cancel" />
</LinearLayout>