<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.zhy.android.percent.support.PercentRelativeLayout android:id="@id/rl_at_fan_yk" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/bg">
        <com.ex.ltech.hongwai.view.ImageTextButton android:id="@id/bt_off" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/hongwai_light" android:scaleType="fitCenter" app:iv_drawable="@mipmap/ctrl_on" app:tv_name="@string/rc_key_on_off" app:layout_widthPercent="33.3%w" app:layout_heightPercent="50%h" />
        <com.ex.ltech.hongwai.view.ImageTextButton android:id="@id/bt_time" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/hongwai_light" android:scaleType="fitCenter" app:iv_drawable="@mipmap/n_f_time" app:tv_name="@string/rc_key_fan_timing" app:layout_widthPercent="33.3%w" app:layout_heightPercent="50%h" app:layout_marginTopPercent="50%h" />
        <com.ex.ltech.hongwai.view.ImageTextButton android:id="@id/bt_speed" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/hongwai_light" android:scaleType="fitCenter" android:layout_toRightOf="@id/bt_off" app:iv_drawable="@mipmap/n_f_speed" app:tv_name="@string/rc_key_fan_speed" app:layout_widthPercent="33.3%w" app:layout_heightPercent="50%h" />
        <com.ex.ltech.hongwai.view.ImageTextButton android:id="@id/bt_quiet" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/hongwai_light" android:scaleType="fitCenter" android:layout_toRightOf="@id/bt_off" app:iv_drawable="@mipmap/n_f_mute" app:tv_name="@string/rc_key_fan_mute" app:layout_widthPercent="33.3%w" app:layout_heightPercent="50%h" app:layout_marginTopPercent="50%h" />
        <com.ex.ltech.hongwai.view.ImageTextButton android:id="@id/bt_type" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/hongwai_light" android:scaleType="fitCenter" android:layout_toRightOf="@id/bt_speed" app:iv_drawable="@mipmap/n_f_type" app:tv_name="@string/rc_key_fan_type" app:layout_widthPercent="33.3%w" app:layout_heightPercent="50%h" />
        <com.ex.ltech.hongwai.view.ImageTextButton android:id="@id/bt_sweep" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/n_f_shake" android:scaleType="fitCenter" android:layout_toRightOf="@id/bt_speed" app:iv_drawable="@mipmap/n_f_shake" app:tv_name="@string/rc_key_fan_head" app:layout_widthPercent="33.3%w" app:layout_heightPercent="50%h" app:layout_marginTopPercent="50%h" />
        <TextView android:background="#ffd9d9d9" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_centerHorizontal="true" app:layout_marginTopPercent="50%h" />
    </com.zhy.android.percent.support.PercentRelativeLayout>
</LinearLayout>